--- a/docker-config/php/Dockerfile
+++ b/docker-config/php/Dockerfile
@@ -16,20 +16,24 @@ RUN apt-get update && apt-get install -y \
         shmop sockets sysvmsg sysvsem sysvshm \
         zip iconv pdo_mysql intl \
         && \
-        docker-php-ext-configure gd --with-freetype-dir=/usr/include/ --with-jpeg-dir=/usr/include/ \
+        docker-php-ext-configure gd --with-freetype=/usr/include/ --with-jpeg=/usr/include/ \
         && \
         docker-php-ext-enable imagick
 
-RUN curl -sS https://getcomposer.org/installer | php -- --install-dir=/usr/local/bin/ --filename=composer
-RUN composer global require hirak/prestissimo
+RUN docker-php-ext-install soap
 
-RUN echo "upload_max_filesize = 10M" > /usr/local/etc/php/php.ini && \
-    echo "post_max_size = 10M" >> /usr/local/etc/php/php.ini && \
+RUN curl -sS https://getcomposer.org/installer | php -- --install-dir=/usr/local/bin/ --filename=composer
+
+RUN echo "upload_max_filesize = 128M" > /usr/local/etc/php/php.ini && \
+    echo "post_max_size = 128M" >> /usr/local/etc/php/php.ini && \
     echo "max_execution_time = 300" >> /usr/local/etc/php/php.ini && \
     echo "memory_limit = 256M" >> /usr/local/etc/php/php.ini
 
 COPY --chown=www-data:www-data ./src /var/www/html
 
-RUN composer install -d /var/www/html/ && \
-    chown -R www-data:www-data /var/www/html/vendor && \
-    chown -R www-data:www-data /var/www/html/composer.lock
+WORKDIR /var/www/html/
+
+RUN cp /var/www/html/config/.env /var/www/html
+RUN COMPOSER_VENDOR_DIR="/srv/vendor" composer install
+RUN composer install
+RUN chown -R www-data:www-data /var/www/html/composer.lock
