--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -45,6 +45,7 @@ services:
           - 1111:80
       environment:
           PMA_HOST: database
+          UPLOAD_LIMIT: 300M
 
   webpack:
       image: node:10-alpine
@@ -60,7 +61,7 @@ services:
         - ./src/web:/app/web:rw
       expose:
         - 8080
-      command: sh -c 'npm install && npm run watch'
+      command: sh -c 'npm install && npm run bot-dev'
 
 volumes:
   db:
