--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -10,6 +10,19 @@ services:
           - cpresources:/var/www/html/web/cpresources
           - ./src/web:/var/www/html/web
 
+  webpack:
+      image: node:10-alpine
+      working_dir: /app
+      volumes:
+        - node_modules:/app/node_modules
+        - ./src/web:/app/web:rw
+        - ./src:/app
+      environment:
+          CHOKIDAR_USEPOLLING: 1
+      expose:
+        - 8080
+      command: sh -c 'npm install && npm run bot-dev'
+
   php:
       build:
         context: .
@@ -46,22 +59,6 @@ services:
       environment:
           PMA_HOST: database
           UPLOAD_LIMIT: 300M
-
-  webpack:
-      image: node:10-alpine
-      working_dir: /app
-      volumes:
-        - ./src/webpack.config.js:/app/webpack.config.js
-        - ./src/package.json:/app/package.json
-        - ./src/.babelrc:/app/.babelrc
-        - ./src/.eslintrc:/app/.eslintrc
-        - ./src/postcss.config.js:/app/postcss.config.js
-        - ./src/package-lock.json:/app/package-lock.json
-        - ./src/node_modules:/app/node_modules
-        - ./src/web:/app/web:rw
-      expose:
-        - 8080
-      command: sh -c 'npm install && npm run bot-dev'
 
 volumes:
   db:
