--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -18,10 +18,6 @@ services:
           - 9000
       volumes:
           - cpresources:/var/www/html/web/cpresources
-          - ./src/composer.json:/var/www/html/composer.json
-          - ./src/composer.lock:/var/www/html/composer.lock
-          - ./src/config:/var/www/html/config
-          - ./src/modules:/var/www/html/modules
           - ./src/templates:/var/www/html/templates
           - ./src/web:/var/www/html/web
       env_file:
@@ -31,6 +27,7 @@ services:
       image: mariadb:10.3
       volumes:
           - db:/var/lib/mysql
+          - ./db:/var/import
       ports:
           - 3306:3306
       environment:
