--- a/docker-config/php/Dockerfile
+++ b/docker-config/php/Dockerfile
@@ -22,14 +22,9 @@ RUN apt-get update && apt-get install -y \
 
 RUN docker-php-ext-install soap
 
-RUN curl -sS https://getcomposer.org/installer | php -- --install-dir=/usr/local/bin/ --filename=composer
-
 RUN echo "upload_max_filesize = 128M" > /usr/local/etc/php/php.ini && \
     echo "post_max_size = 128M" >> /usr/local/etc/php/php.ini && \
     echo "max_execution_time = 300" >> /usr/local/etc/php/php.ini && \
     echo "memory_limit = 256M" >> /usr/local/etc/php/php.ini
 
-WORKDIR /var/www/html/
-
-RUN composer install
-RUN chown -R www-data:www-data /var/www/html/composer.lock
+COPY --chown=www-data:www-data ./src /var/www/html
