--- a/docker-config/nginx/default.conf
+++ b/docker-config/nginx/default.conf
@@ -5,6 +5,10 @@ server {
     charset utf-8;
 
     location / {
+        add_header 'Access-Control-Allow-Origin' '*';
+        add_header 'Access-Control-Allow-Headers' 'Authorization,Accept,Origin,DNT,X-CustomHeader,Keep-Alive,User-Agent,
+        X-Requested-With,If-Modified-Since,Cache-Control,Content-Type,Content-Range,Range';
+        add_header 'Access-Control-Allow-Methods' 'GET,POST,OPTIONS,PUT,DELETE,PATCH';
         try_files $uri $uri/ /index.php?$query_string;
     }
 
