--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -48,6 +48,18 @@ services:
       environment:
           PMA_HOST: database
           UPLOAD_LIMIT: 300M
+  webpack:
+      image: node:10-alpine
+      working_dir: /app
+      volumes:
+        - node_modules:/app/node_modules
+        - ./src/web:/app/web:rw
+        - ./src:/app
+      environment:
+          CHOKIDAR_USEPOLLING: 1
+      expose:
+        - 8080
+      command: sh -c 'npm install && npm run eshop-dev'
 
 volumes:
   db:
