--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -21,6 +21,7 @@ services:
           - cpresources:/var/www/html/web/cpresources
           - ./src/config:/var/www/html/config
           - ./src/templates:/var/www/html/templates
+          - ./src/modules:/var/www/html/modules
           - ./src/web:/var/www/html/web
       env_file:
           - ./src/.env
